feat: app supports load/save config